--- a/package.json
+++ b/package.json
@@ -9,9 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.50.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "connectkit": "^1.8.2",
+    "embla-carousel-react": "^8.1.6",
+    "encoding": "^0.1.13",
+    "lucide-react": "^0.400.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "pino-pretty": "^11.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.10.9"
   },
   "devDependencies": {
     "typescript": "^5",
